[skip] Fixed alignment of H6 with PRE (4m)

--- a/app/assets/stylesheets/houston/reports/charts.scss
+++ b/app/assets/stylesheets/houston/reports/charts.scss
@@ -69,11 +69,16 @@ text.heading { fill: #6D7577; }
 
 .report-details { margin: 5em 0; }
 .report-details h6 {
-  text-align: left;
   white-space: pre;
   font-family: monospace;
   font-size: inherit;
   font-weight: normal;
   text-decoration: underline;
-  margin: 1em 0 0 60px; // not sure why the 60px...
+  
+  text-align: left;
+  margin: 1em 0 0 60px;
+}
+.report-details pre {
+  text-align: left;
+  margin: 1em 0 0 60px;
 }
